# chatbot-guardrails

./: .env.example  .env.old  .gitignore  README.md  a  cli.py  policies.yml  pyproject.toml
core/: __init__.py  chroma_db.py  config.py  events.py  types.py
data/chroma/: chroma.sqlite3
guardrails/: __init__.py  context_sanitizer.py  input_filter.py  output_filter.py  policy_engine.py  topic_guard.py
llm/: __init__.py  client.py  prompt_builder.py
observability/: __init__.py  audit.py
pipeline/: orchestrator.py
rag/: __init__.py  context_retrieval.py
sdk/: __init__.py  plugins.py
security/: __init__.py  auth.py  rate_limit.py
tests/: conftest.py  test_adversarial.py  test_detectors.py  test_pipeline.py
tools/: __init__.py  gateway.py
